@@ -236,7 +236,9 @@ operator|=
 name|searcher
 operator|.
 name|getSimilarity
-argument_list|()
+argument_list|(
+name|needsScores
+argument_list|)
 expr_stmt|;
 name|weights
 operator|=
