@@ -156,6 +156,19 @@ name|lucene
 operator|.
 name|index
 operator|.
+name|FieldInvertState
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
 name|IndexReader
 import|;
 end_import
@@ -348,6 +361,19 @@ name|lucene
 operator|.
 name|util
 operator|.
+name|BytesRef
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
 name|ThreadInterruptedException
 import|;
 end_import
@@ -360,6 +386,164 @@ specifier|public
 class|class
 name|IndexSearcher
 block|{
+comment|/** A search-time {@link Similarity} that does not make use of scoring factors    *  and may be used when scores are not needed. */
+DECL|field|NON_SCORING_SIMILARITY
+specifier|private
+specifier|static
+specifier|final
+name|Similarity
+name|NON_SCORING_SIMILARITY
+init|=
+operator|new
+name|Similarity
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|long
+name|computeNorm
+parameter_list|(
+name|FieldInvertState
+name|state
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|UnsupportedOperationException
+argument_list|(
+literal|"This Similarity may only be used for searching, not indexing"
+argument_list|)
+throw|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|SimWeight
+name|computeWeight
+parameter_list|(
+name|float
+name|queryBoost
+parameter_list|,
+name|CollectionStatistics
+name|collectionStats
+parameter_list|,
+name|TermStatistics
+modifier|...
+name|termStats
+parameter_list|)
+block|{
+return|return
+operator|new
+name|SimWeight
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|float
+name|getValueForNormalization
+parameter_list|()
+block|{
+return|return
+literal|1f
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|void
+name|normalize
+parameter_list|(
+name|float
+name|queryNorm
+parameter_list|,
+name|float
+name|topLevelBoost
+parameter_list|)
+block|{}
+block|}
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|SimScorer
+name|simScorer
+parameter_list|(
+name|SimWeight
+name|weight
+parameter_list|,
+name|LeafReaderContext
+name|context
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+return|return
+operator|new
+name|SimScorer
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|float
+name|score
+parameter_list|(
+name|int
+name|doc
+parameter_list|,
+name|float
+name|freq
+parameter_list|)
+block|{
+return|return
+literal|0f
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|float
+name|computeSlopFactor
+parameter_list|(
+name|int
+name|distance
+parameter_list|)
+block|{
+return|return
+literal|1f
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|float
+name|computePayloadFactor
+parameter_list|(
+name|int
+name|doc
+parameter_list|,
+name|int
+name|start
+parameter_list|,
+name|int
+name|end
+parameter_list|,
+name|BytesRef
+name|payload
+parameter_list|)
+block|{
+return|return
+literal|1f
+return|;
+block|}
+block|}
+return|;
+block|}
+block|}
+decl_stmt|;
 comment|// disabled by default
 DECL|field|DEFAULT_QUERY_CACHE
 specifier|private
@@ -443,7 +627,7 @@ name|queryCachingPolicy
 init|=
 name|DEFAULT_CACHING_POLICY
 decl_stmt|;
-comment|/**    * Expert: returns a default Similarity instance.    * In general, this method is only called to initialize searchers and writers.    * User code and query implementations should respect    * {@link IndexSearcher#getSimilarity()}.    * @lucene.internal    */
+comment|/**    * Expert: returns a default Similarity instance.    * In general, this method is only called to initialize searchers and writers.    * User code and query implementations should respect    * {@link IndexSearcher#getSimilarity(boolean)}.    * @lucene.internal    */
 DECL|method|getDefaultSimilarity
 specifier|public
 specifier|static
@@ -849,14 +1033,22 @@ operator|=
 name|similarity
 expr_stmt|;
 block|}
+comment|/** Expert: Get the {@link Similarity} to use to compute scores. When    *  {@code needsScores} is {@code false}, this method will return a simple    *  {@link Similarity} that does not leverage scoring factors such as norms.    *  When {@code needsScores} is {@code true}, this returns the    *  {@link Similarity} that has been set through {@link #setSimilarity(Similarity)}    *  or the {@link #getDefaultSimilarity()} default {@link Similarity} if none    *  has been set explicitely. */
 DECL|method|getSimilarity
 specifier|public
 name|Similarity
 name|getSimilarity
-parameter_list|()
+parameter_list|(
+name|boolean
+name|needsScores
+parameter_list|)
 block|{
 return|return
+name|needsScores
+condition|?
 name|similarity
+else|:
+name|NON_SCORING_SIMILARITY
 return|;
 block|}
 comment|/**    * Count how many documents match the given query.    */
@@ -2225,7 +2417,9 @@ name|float
 name|norm
 init|=
 name|getSimilarity
-argument_list|()
+argument_list|(
+name|needsScores
+argument_list|)
 operator|.
 name|queryNorm
 argument_list|(
