@@ -351,41 +351,6 @@ operator|=
 name|matchWeight
 expr_stmt|;
 block|}
-DECL|method|SpanPositionCheckWeight
-specifier|public
-name|SpanPositionCheckWeight
-parameter_list|(
-name|SpanWeight
-name|matchWeight
-parameter_list|,
-name|IndexSearcher
-name|searcher
-parameter_list|,
-name|Map
-argument_list|<
-name|Term
-argument_list|,
-name|TermContext
-argument_list|>
-name|terms
-parameter_list|)
-throws|throws
-name|IOException
-block|{
-name|this
-argument_list|(
-name|matchWeight
-argument_list|,
-name|searcher
-argument_list|,
-name|terms
-argument_list|,
-name|SpanCollectorFactory
-operator|.
-name|NO_OP_FACTORY
-argument_list|)
-expr_stmt|;
-block|}
 annotation|@
 name|Override
 DECL|method|extractTerms
