@@ -1854,7 +1854,9 @@ init|=
 name|searcher
 operator|.
 name|getSimilarity
-argument_list|()
+argument_list|(
+literal|true
+argument_list|)
 decl_stmt|;
 try|try
 block|{
@@ -2054,7 +2056,9 @@ argument_list|(
 name|bigSearcher
 operator|.
 name|getSimilarity
-argument_list|()
+argument_list|(
+literal|true
+argument_list|)
 argument_list|)
 expr_stmt|;
 comment|// random sim
