@@ -429,7 +429,9 @@ init|=
 name|searcher1
 operator|.
 name|getSimilarity
-argument_list|()
+argument_list|(
+literal|true
+argument_list|)
 decl_stmt|;
 comment|// boosting
 name|IndexSearcher
