@@ -1079,6 +1079,146 @@ literal|"}"
 return|;
 block|}
 block|}
+DECL|method|testDoesNotLoadNorms
+specifier|public
+name|void
+name|testDoesNotLoadNorms
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|Term
+name|allTerm
+init|=
+operator|new
+name|Term
+argument_list|(
+name|FIELD
+argument_list|,
+literal|"all"
+argument_list|)
+decl_stmt|;
+name|TermQuery
+name|termQuery
+init|=
+operator|new
+name|TermQuery
+argument_list|(
+name|allTerm
+argument_list|)
+decl_stmt|;
+name|LeafReader
+name|forbiddenNorms
+init|=
+operator|new
+name|FilterLeafReader
+argument_list|(
+name|indexReader
+argument_list|)
+block|{
+annotation|@
+name|Override
+specifier|public
+name|NumericDocValues
+name|getNormValues
+parameter_list|(
+name|String
+name|field
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|fail
+argument_list|(
+literal|"Norms should not be loaded"
+argument_list|)
+expr_stmt|;
+comment|// unreachable
+return|return
+literal|null
+return|;
+block|}
+block|}
+decl_stmt|;
+name|IndexSearcher
+name|indexSearcher
+init|=
+name|newSearcher
+argument_list|(
+name|forbiddenNorms
+argument_list|)
+decl_stmt|;
+name|Weight
+name|weight
+init|=
+name|indexSearcher
+operator|.
+name|createNormalizedWeight
+argument_list|(
+name|termQuery
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|weight
+operator|.
+name|scorer
+argument_list|(
+name|forbiddenNorms
+operator|.
+name|getContext
+argument_list|()
+argument_list|,
+literal|null
+argument_list|)
+operator|.
+name|nextDoc
+argument_list|()
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Should load norms"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|AssertionError
+name|e
+parameter_list|)
+block|{
+comment|// ok
+block|}
+name|weight
+operator|=
+name|indexSearcher
+operator|.
+name|createNormalizedWeight
+argument_list|(
+name|termQuery
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+comment|// should not fail this time since norms are not necessary
+name|weight
+operator|.
+name|scorer
+argument_list|(
+name|forbiddenNorms
+operator|.
+name|getContext
+argument_list|()
+argument_list|,
+literal|null
+argument_list|)
+operator|.
+name|nextDoc
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 end_class
 end_unit
