@@ -1773,7 +1773,9 @@ argument_list|,
 name|searcher
 operator|.
 name|getSimilarity
-argument_list|()
+argument_list|(
+literal|true
+argument_list|)
 operator|instanceof
 name|TFIDFSimilarity
 argument_list|)
@@ -2331,7 +2333,9 @@ argument_list|,
 name|searcher
 operator|.
 name|getSimilarity
-argument_list|()
+argument_list|(
+literal|true
+argument_list|)
 operator|instanceof
 name|TFIDFSimilarity
 argument_list|)
