@@ -1934,7 +1934,9 @@ init|=
 name|searcher
 operator|.
 name|getSimilarity
-argument_list|()
+argument_list|(
+literal|true
+argument_list|)
 decl_stmt|;
 name|Scorer
 name|spanScorer
