@@ -264,7 +264,9 @@ argument_list|(
 name|searcher
 operator|.
 name|getSimilarity
-argument_list|()
+argument_list|(
+literal|true
+argument_list|)
 argument_list|,
 name|field
 argument_list|)
