@@ -570,7 +570,9 @@ init|=
 name|searcher
 operator|.
 name|getSimilarity
-argument_list|()
+argument_list|(
+literal|true
+argument_list|)
 decl_stmt|;
 try|try
 block|{
