@@ -2517,7 +2517,9 @@ argument_list|,
 name|searcher
 operator|.
 name|getSimilarity
-argument_list|()
+argument_list|(
+literal|true
+argument_list|)
 operator|instanceof
 name|DefaultSimilarity
 argument_list|)
@@ -2531,7 +2533,9 @@ operator|)
 name|searcher
 operator|.
 name|getSimilarity
-argument_list|()
+argument_list|(
+literal|true
+argument_list|)
 decl_stmt|;
 name|NumericDocValues
 name|titleNorms
